Updated processes and started to reformat into user-defined objects

--- a/Osteostrong Project/OS_Sandbox/DTC/DTC_Active_FUB.ipynb
+++ b/Osteostrong Project/OS_Sandbox/DTC/DTC_Active_FUB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,8 @@
     "        alert.append(metrics_dropped.loc[k,['FirstName','LastName','SessionCount']])\n",
     "alert=pd.DataFrame(alert,columns=['FirstName','LastName','SessionCount']).sort_values(by='SessionCount',ascending=False)\n",
     "alert.reset_index(drop=True,inplace=True)\n",
-    "alert.to_excel(f'/Users/dreamscape08/Desktop/OS_METRICS/Osteostrong Project/OS_Operations_Reports/{lid}_{cd}.xlsx', header=True,index=False)\n",
+    "\n",
+    "alert.to_excel(f'/Users/dreamscape08/Desktop/OS_METRICS/shadowbox/{lid}_{cd}.xlsx', header=True,index=False)\n",
     "dbusername = config('pg_username')\n",
     "dbpassword = config('pg_password')\n",
     "host = 'localhost'\n",
@@ -114,7 +115,7 @@
     "admin_email = f'{sender_proton}' # (You should provide your gmail account name)\n",
     "admin_pass = f'{p_key}' # (You should provide your gmail password)\n",
     "\n",
-    "pathnow=f'/Users/dreamscape08/Desktop/OS_METRICS/Osteostrong Project/OS_Operations_Reports/{lid}_{cd}.xlsx'\n",
+    "pathnow=f'/Users/dreamscape08/Desktop/OS_METRICS/shadowbox/{lid}_{cd}.xlsx'\n",
     "def send_mail_with_excel():\n",
     "    msg = EmailMessage()\n",
     "    msg['Subject'] = f'DTC FUB ALERTS-{cd}'\n",
