--- a/Osteostrong Project/OS_Sandbox/Lakewood/LAKEWOOD_Active_FUB.ipynb
+++ b/Osteostrong Project/OS_Sandbox/Lakewood/LAKEWOOD_Active_FUB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -46,11 +46,12 @@
     "\n",
     "LW_payload = {'username': LW_username, 'password': LW_password}\n",
     "loginurl = ('https://osteostrong.org/auth')\n",
-    "LW_totals = []\n",
+    "\n",
+    "lid='00053'\n",
     "\n",
     "with requests.session() as s:\n",
     "    s.post(loginurl, data=LW_payload)\n",
-    "    LW_url = f'https://osteostrong.org/user/users?LocationId=00053'\n",
+    "    LW_url = f'https://osteostrong.org/user/users?LocationId={lid}'\n",
     "    LW_r = s.get(LW_url).text\n",
     "    jsondata=json.loads(LW_r)    \n",
     "s.close()\n",
@@ -87,7 +88,8 @@
     "        alert.append(metrics_df.loc[k,['FirstName','LastName','SessionCount']])\n",
     "alert=pd.DataFrame(alert,columns=['FirstName','LastName','SessionCount']).sort_values(by='SessionCount',ascending=False)\n",
     "alert.reset_index(drop=True,inplace=True)\n",
-    "alert.to_excel(f'/Users/dreamscape08/Desktop/OS_METRICS/Osteostrong Project/OS_Operations_Reports/LW-{current_date}.xlsx', header=True,index=False)\n",
+    "\n",
+    "alert.to_excel(f'/Users/dreamscape08/Desktop/OS_METRICS/shadowbox/{lid}_{cd}.xlsx', header=True,index=False)\n",
     "username = config('pg_username')\n",
     "password = config('pg_password')\n",
     "host = 'localhost'\n",
@@ -95,7 +97,7 @@
     "database = 'osteostrong'\n",
     "postgres_str = f'postgresql://{username}:{password}@{host}:{port}/{database}'\n",
     "cnx=create_engine(postgres_str)\n",
-    "metrics_df.to_sql('lw_Clientdb', cnx, if_exists='replace',index=False)\n",
+    "metrics_df.to_sql(f'{lid}_Active', cnx, if_exists='replace',index=False)\n",
     "operations_manager = config('opm_email')\n",
     "sender_proton = config('proton_email')\n",
     "p_key = config('proton_key')\n",
@@ -103,17 +105,17 @@
     "admin_email = f'{sender_proton}' # (You should provide your gmail account name)\n",
     "admin_pass = f'{p_key}' # (You should provide your gmail password)\n",
     "\n",
-    "pathnow=f'/Users/dreamscape08/Desktop/OS_METRICS/Osteostrong Project/OS_Operations_Reports/LW-{current_date}.xlsx'\n",
+    "pathnow=f'/Users/dreamscape08/Desktop/OS_METRICS/shadowbox/{lid}_{cd}.xlsx'\n",
     "def send_mail_with_excel():\n",
     "    msg = EmailMessage()\n",
-    "    msg['Subject'] = f'LW FUB ALERTS-{current_date}'\n",
+    "    msg['Subject'] = f'LW FUB ALERTS-{cd}'\n",
     "    msg['From'] = admin_email\n",
     "    msg['To'] = to\n",
     "    msg.set_content(f'{alert}')\n",
     "\n",
     "    with open(pathnow, 'rb') as f:\n",
     "        file_data = f.read()\n",
-    "    msg.add_attachment(file_data, maintype=\"application\", subtype=\"vnd.openxmlformats-officedocument.spreadsheetml.sheet\", filename=f'LW_FUB_{current_date}.xlsx')\n",
+    "    msg.add_attachment(file_data, maintype=\"application\", subtype=\"vnd.openxmlformats-officedocument.spreadsheetml.sheet\", filename=f'LW_FUB_{cd}.xlsx')\n",
     "\n",
     "    with smtplib.SMTP('localhost',1025) as smtpserver:\n",
     "        smtpserver.ehlo()\n",
