Updated URL & User Names

--- a/Osteostrong Project/OS_Sandbox/DTC/DTC_Active_FUB.ipynb
+++ b/Osteostrong Project/OS_Sandbox/DTC/DTC_Active_FUB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -90,6 +90,7 @@
     "        metrics.append([userid,firstname,lastname,email,last_sesh,sesh_count,active])\n",
     "columns=['UserId','FirstName','LastName','Email','LastSession','SessionCount','Active']\n",
     "metrics_df=pd.DataFrame(metrics,columns=columns)\n",
+    "metrics_df.to_excel(f'DTC_DATA.xlsx')\n",
     "metrics_dropped=metrics_df.dropna().reset_index(drop=True)\n",
     "alert=[]\n",
     "list = [4,9,24,49,74,99,124,149,199]\n",
