--- a/Osteostrong Project/OS_Sandbox/Lakewood/LAKEWOOD_Active_FUB.ipynb
+++ b/Osteostrong Project/OS_Sandbox/Lakewood/LAKEWOOD_Active_FUB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LW_username = config('lw_username')\n",
+    "LW_password = config('lw_password')\n",
+    "\n",
+    "LW_payload = {'username': LW_username, 'password': LW_password}\n",
+    "loginurl = ('https://osteostrong.org/auth')\n",
+    "\n",
+    "lid='00053'\n",
+    "list=[]\n",
+    "with requests.session() as s:\n",
+    "    s.post(loginurl, data=LW_payload)\n",
+    "    LW_url = f'https://osteostrong.org/user/users?LocationId={lid}'\n",
+    "    LW_r = s.get(LW_url).text\n",
+    "    jsondata=json.loads(LW_r) \n",
+    "# for i in range(len(jsondata)):    \n",
+    "#     userid=jsondata[i]['NfcId.S']\n",
+    "#     list.append(userid)\n",
+    "# print(list)\n",
+    "jsondata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list=[]\n",
+    "for i in range(len(jsondata)):\n",
+    "    try:\n",
+    "        nfcid=jsondata[i]['NfcId']['S']\n",
+    "    except:\n",
+    "        nfcid=0\n",
+    "    finally:\n",
+    "        list.append(nfcid)   \n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list=[]\n",
+    "customgoogle=[]\n",
+    "for i in range(len(jsondata)):    \n",
+    "    userid=jsondata[i]['UserId']['S']\n",
+    "    firstname=jsondata[i]['FirstName']['S']\n",
+    "    lastname=jsondata[i]['LastName']['S']\n",
+    "    email=jsondata[i]['Email']['S']\n",
+    "    active=None\n",
+    "    nfcid=0\n",
+    "    try:\n",
+    "       nfcid=jsondata[i]['NfcId']['S']\n",
+    "       last_sesh=jsondata[i]['Sessions']['M']['Core']['L'][-1]['M']['Date']['S']       \n",
+    "       last_sesh=pd.to_datetime(last_sesh)\n",
+    "       sesh_count=len(jsondata[i]['Sessions']['M']['Core']['L'])\n",
+    "       if last_sesh > al:\n",
+    "           active=True        \n",
+    "    except:\n",
+    "        last_sesh=None\n",
+    "        nfcid=0        \n",
+    "        sesh_count=0\n",
+    "    finally:\n",
+    "        customgoogle.append([userid,firstname,lastname,email,last_sesh,sesh_count,active,nfcid])\n",
+    "columns=['UserId','FirstName','LastName','Email','LastSession','SessionCount','Active','NfcId']\n",
+    "metrics_df=pd.DataFrame(customgoogle,columns=columns)\n",
+    "metrics_df.to_excel(f'LWDATANEW.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics=[]\n",
+    "for i in range(len(jsondata)):    \n",
+    "    userid=jsondata[i]['UserId']['S']\n",
+    "    firstname=jsondata[i]['FirstName']['S']\n",
+    "    lastname=jsondata[i]['LastName']['S']\n",
+    "    email=jsondata[i]['Email']['S']\n",
+    "    active=None\n",
+    "    try:\n",
+    "       last_sesh=jsondata[i]['Sessions']['M']['Core']['L'][-1]['M']['Date']['S']       \n",
+    "       last_sesh=pd.to_datetime(last_sesh)\n",
+    "       sesh_count=len(jsondata[i]['Sessions']['M']['Core']['L'])\n",
+    "       if last_sesh > al:\n",
+    "           active=True        \n",
+    "    except:\n",
+    "        last_sesh=None        \n",
+    "        sesh_count=0\n",
+    "    finally:\n",
+    "        metrics.append([userid,firstname,lastname,email,last_sesh,sesh_count,active])\n",
+    "print(metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +166,13 @@
     "    LW_r = s.get(LW_url).text\n",
     "    jsondata=json.loads(LW_r)    \n",
     "s.close()\n",
-    "metrics=[]\n",
+    "\n",
     "# x=int(input())\n",
     "current_date = datetime.now()\n",
     "cd=current_date.strftime(\"%m-%d-%Y\") \n",
     "activelimit=(current_date - timedelta(days=35)).strftime(\"%m-%d-%Y\")\n",
     "al=datetime.strptime(activelimit, \"%m-%d-%Y\")\n",
+    "metrics=[]\n",
     "for i in range(len(jsondata)):    \n",
     "    userid=jsondata[i]['UserId']['S']\n",
     "    firstname=jsondata[i]['FirstName']['S']\n",
@@ -78,8 +190,12 @@
     "        sesh_count=0\n",
     "    finally:\n",
     "        metrics.append([userid,firstname,lastname,email,last_sesh,sesh_count,active])\n",
+    "\n",
+    "\n",
+    "\n",
     "columns=['UserId','FirstName','LastName','Email','LastSession','SessionCount','Active']\n",
     "metrics_df=pd.DataFrame(metrics,columns=columns)\n",
+    "metrics_df.to_excel(f'LW_DATA.xlsx')\n",
     "metrics_df=metrics_df.dropna().reset_index(drop=True)\n",
     "alert=[]\n",
     "list = [4,9,24,49,74,99,124,149,199]\n",
